tests/NormalTests/paczka1/fuzzy1/41895825.err
Error in line 8: S98 S584 420,68
Error in line 5: sHd3M4jqfKF S584 93,6
Error in line 3: kqBwMfBwy S98 70,6
Error in line 9: sHd3M4jqfKF S98 88,4
Error in line 17: sHd3M4jqfKF A949 85,9
Error in line 7: S98 S584 93,3
Error in line 33: sHd3M4jqfKF S98 17,0
